--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "edu.stanford.cs193a.bunnyworld"
+        applicationId "edu.stanford.cs108.bunnyworld"
         minSdkVersion 28
         targetSdkVersion 28
         versionCode 1
