--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.stanford.cs193a.bunnyworld">
+    package="edu.stanford.cs108.bunnyworld">
 
     <application
         android:allowBackup="true"
