--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".PageDirectory"></activity>
+        <activity android:name=".PageDirectory" />
         <activity android:name=".GameEditor" />
         <activity android:name=".MainActivity">
             <intent-filter>
