completed game view functionality (to my knowledge), bunny world example available and runnable, relevant changes to Page and Shape

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".GameActivity"></activity>
         <activity android:name=".PageDirectory" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".GameEditor">
+        <activity android:name="GameEditor" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
