--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".GameActivity"></activity>
-        <activity android:name=".PageDirectory" />
-        <activity android:name=".GameEditor" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".GameActivity"
+            android:screenOrientation="landscape"></activity>
+        <activity android:name=".PageDirectory"
+            android:screenOrientation="landscape"/>
+        <activity android:name=".GameEditor"
+            android:screenOrientation="landscape"/>
+        <activity android:name=".MainActivity"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
